clang/test/BSC/Negative/Others/nullptr_cast/nullptr_cast.cbs
// RUN: %clang_cc1 -verify %s

struct MyStruct {
    int data;
};

void take_pointer(int *ptr) {}

int* return_pointer() {
    // Implicit conversion on return value
    return nullptr; 
}

void test_nullptr_comprehensive() {

    // Explicit Casts: Verify the newly fixed CK_NullToPointer path.
    void *p1 = (void *)(nullptr);
    int *p2 = (int *)nullptr;
    struct MyStruct *p3 = (struct MyStruct *)nullptr;

    // Implicit Conversions: Sema::CheckSingleAssignmentConstraints.
    void *p4 = nullptr;
    int *p5 = nullptr;
    take_pointer(nullptr);

    // Relational Operators: Sema::CheckCompareOperands.
    int is_null1 = (p5 == nullptr);
    int is_null2 = (nullptr != p4);

    // Negative Tests: Verify expected errors, ensure no core dumps.
    int val = nullptr;       // expected-error {{initializing 'int' with an expression of incompatible type 'nullptr_t'}}
    void * p9 = (void*)nullptr;
}